BigRedesign Project Structure